--- a/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
+++ b/collapsiblecalendarview2/src/main/res/layout/day_layout.xml
@@ -15,21 +15,13 @@
         android:textColor="@android:color/black"
         android:background="@android:color/transparent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:paddingBottom="6dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+    <ImageView
+        android:id="@+id/img_event_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="11dp"
+        android:src="@drawable/dot_icon"
+        android:visibility="gone"
+        />
 
-        <ImageView
-            android:id="@+id/img_event_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dot_icon"
-            android:visibility="gone" />
-
-    </LinearLayout>
 
 </LinearLayout >
